--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="orange_200">#FFE082</color>
     <color name="orange_700">#FFA000</color>
     <color name="black">#FF000000</color>
-    <color name="grey">#F6F8FA</color>
+    <color name="search_bg">#F4F4F4</color>
+    <color name="grey">#808080</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
