我的页面添加

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -24,7 +24,7 @@
 
 
     <EditText
-        android:id="@+id/user_name_edit"
+        android:id="@+id/old_password_edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="left"
@@ -32,29 +32,29 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/input_bg"
-        android:hint="请输入用户名"
+        android:hint="请输入原密码"
         android:paddingLeft="10dp"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@+id/logo_image" />
 
     <EditText
-        android:id="@+id/password_edit"
+        android:id="@+id/new_password_edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/input_bg"
-        android:hint="请输入密码"
+        android:hint="请输入新密码"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@+id/user_name_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/old_password_edit" />
 
     <TextView
-        android:id="@+id/login_text"
+        android:id="@+id/change_text"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="40dp"
@@ -62,9 +62,9 @@
         android:layout_marginRight="40dp"
         android:background="@drawable/button_bg"
         android:gravity="center"
-        android:text="登录"
+        android:text="修改"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/password_edit" />
+        app:layout_constraintTop_toBottomOf="@id/new_password_edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
