--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.RegisterActivity">
 
     <com.wuhuabin.cookbook.views.TitleView
         android:id="@+id/title_view"
@@ -20,8 +20,7 @@
         android:src="@mipmap/ic_launcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_view" />
-
+        app:layout_constraintTop_toBottomOf="@id/title_view" />
 
     <EditText
         android:id="@+id/user_name_edit"
@@ -54,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user_name_edit" />
 
     <TextView
-        android:id="@+id/login_text"
+        android:id="@+id/register_text"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="40dp"
@@ -62,7 +61,7 @@
         android:layout_marginRight="40dp"
         android:background="@drawable/button_bg"
         android:gravity="center"
-        android:text="登录"
+        android:text="注册"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
