--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="search_bg">#F4F4F4</color>
     <color name="grey">#808080</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#3F51B5</color>
 </resources>
