--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="用户名："
         android:textColor="@color/black"
@@ -31,7 +31,7 @@
         android:layout_height="50dp"
         android:layout_marginRight="15dp"
         android:gravity="center|left"
-        android:text="1231313"
+        android:text="123123"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:visibility="visible"
@@ -40,7 +40,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/user_name_tip" />
 
-    <TextView
+    <EditText
         android:id="@+id/user_name_edit"
         android:layout_width="0dp"
         android:layout_height="50dp"
