--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -38,16 +38,17 @@
         android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@id/mine_top_layout">
 
-        <ImageView
+        <com.gcssloop.widget.RCImageView
             android:id="@+id/mine_header_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="10dp"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_default"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:round_as_circle="true" />
 
         <TextView
             android:id="@+id/mine_name"
@@ -108,7 +109,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:gravity="center"
-        android:text="退出登录"
+        android:text="退出当前账号"
         android:textColor="@color/red_500"
         android:textSize="16sp"
         android:textStyle="bold"
