--- a/app/src/main/res/layout/activity_add_cookbook.xml
+++ b/app/src/main/res/layout/activity_add_cookbook.xml
@@ -27,6 +27,8 @@
                 android:id="@+id/cookbook_image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_default"
                 app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,17 +40,119 @@
                 android:layout_marginRight="15dp"
                 android:gravity="center"
                 android:hint="请输入菜谱名称"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/cookbook_image" />
 
             <EditText
                 android:id="@+id/cookbook_info"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
+                android:background="@null"
+                android:gravity="left"
+                android:hint="请输入这道美食背后的故事"
+                android:minHeight="80dp"
+                android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@+id/cookbook_name" />
 
+            <TextView
+                android:id="@+id/material_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:text="用料"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cookbook_info" />
+
+            <LinearLayout
+                android:id="@+id/material_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/material_title">
+
+                <com.wuhuabin.cookbook.views.MaterialItemView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/add_material"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="再增加一行"
+                android:textColor="@color/red_500"
+                android:textSize="12sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/material_layout" />
+
+
+            <TextView
+                android:id="@+id/practice_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:text="做法"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/add_material" />
+
+            <LinearLayout
+                android:id="@+id/practice_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/practice_title">
+
+                <com.wuhuabin.cookbook.views.PracticeItemView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/add_practice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:padding="10dp"
+                android:text="再增加一步"
+                android:textColor="@color/red_500"
+                android:textSize="12sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/practice_layout" />
+
+            <TextView
+                android:id="@+id/release_cookbook"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="50dp"
+                android:background="@color/red_500"
+                android:gravity="center"
+                android:text="发布这个菜谱"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/add_practice" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
