--- a/app/src/main/res/layout/activity_add_cookbook.xml
+++ b/app/src/main/res/layout/activity_add_cookbook.xml
@@ -56,6 +56,7 @@
                 android:gravity="left"
                 android:hint="请输入这道美食背后的故事"
                 android:minHeight="80dp"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@+id/cookbook_name" />
 
