--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -22,9 +22,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_view" />
 
-
     <EditText
-        android:id="@+id/old_password_edit"
+        android:id="@+id/password_edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="left"
@@ -32,26 +31,27 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/input_bg"
-        android:hint="请输入原密码"
+        android:hint="请输入新密码"
         android:paddingLeft="10dp"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@+id/logo_image" />
 
     <EditText
-        android:id="@+id/new_password_edit"
+        android:id="@+id/confirm_password_edit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/input_bg"
-        android:hint="请输入新密码"
+        android:hint="请再次输入新密码"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@+id/old_password_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/password_edit" />
 
     <TextView
         android:id="@+id/change_text"
@@ -66,5 +66,5 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/new_password_edit" />
+        app:layout_constraintTop_toBottomOf="@id/confirm_password_edit" />
 </androidx.constraintlayout.widget.ConstraintLayout>
