--- a/app/src/main/res/layout/activity_add_cookbook.xml
+++ b/app/src/main/res/layout/activity_add_cookbook.xml
@@ -100,7 +100,6 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/material_layout" />
 
-
             <TextView
                 android:id="@+id/practice_title"
                 android:layout_width="wrap_content"
@@ -142,6 +141,28 @@
                 app:layout_constraintTop_toBottomOf="@+id/practice_layout" />
 
             <TextView
+                android:id="@+id/category_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:text="菜谱分类"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/add_practice" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/category_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/category_title" />
+
+            <TextView
                 android:id="@+id/release_cookbook"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -153,7 +174,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/add_practice" />
+                app:layout_constraintTop_toBottomOf="@id/category_recycler_view" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
