--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -74,11 +74,19 @@
         app:layout_constraintTop_toBottomOf="@+id/header_layout" />
 
     <com.wuhuabin.cookbook.views.MineItemView
+        android:id="@+id/audit_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/info_item" />
+
+    <com.wuhuabin.cookbook.views.MineItemView
         android:id="@+id/release_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/info_item" />
+        app:layout_constraintTop_toBottomOf="@+id/audit_item" />
 
     <com.wuhuabin.cookbook.views.MineItemView
         android:id="@+id/change_password_item"
