--- a/app/src/main/res/layout/activity_add_cookbook.xml
+++ b/app/src/main/res/layout/activity_add_cookbook.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_default"
+                android:src="@drawable/add_dish_image"
                 app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintTop_toTopOf="parent" />
 
